chore: add social preview image

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>NanoLink | Encurtador Inteligente</title>
+    <meta name="description" content="Gerencie seus links com analytics em tempo real, QR Codes e muito mais" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nano-link-iota.vercel.app/" />
+    <meta property="og:title" content="NanoLink - SaaS URL Shortener" />
+    <meta property="og:description" content="Dashboard Full-Stack com Auth, Analytics e QR Code." />
+    <meta property="og:image" content="https://nano-link-iota.vercel.app/preview.png" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
